--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="ex02/index.html">Exemplo 2</a></li>
         <li><a href="atividade1/index.html">Atividade 1</a></li>
         <li><a href="atividade2/index.html">Atividade 2</a></li>
+        <li><a href="atividade3/atividade3.html">Atividade 3</a></li>
 
     </ul>
 </body>
