--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="atividade1/index.html">Atividade 1</a></li>
         <li><a href="atividade2/index.html">Atividade 2</a></li>
         <li><a href="atividade3/atividade3.html">Atividade 3</a></li>
+        <li><a href="atividade4/atividade01.html">Atividade 01 JSON</a></li>
 
     </ul>
 </body>
