Feat: Inclusão Site Embarcado

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                   <i class="fas fa-utensils"></i> Restaurante
                </a>
           </li>
+          <li>
+            <a href="Embarcado/index.html">
+                <i class="fa-solid fa-sitemap"></i> Site Embarcado
+             </a>
+        </li>
         </ul>
         <div id="contador-acessos">
             Acessos: <span id="numero-acessos">0</span>
