--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a href="Embarcado/index.html">
                 <i class="fa-solid fa-sitemap"></i> Site Embarcado
              </a>
+              <a href="MercadoLivreInfinity/index.html">
+                <i class="fa-solid fa-sitemap"></i> Site Embarcado
+             </a>
         </li>
         </ul>
         <div id="contador-acessos">
