--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <i class="fa-solid fa-sitemap"></i> Site Embarcado
              </a>
               <a href="MercadoLivreInfinity/index.html">
-                <i class="fa-solid fa-sitemap"></i> Site Embarcado
+                <i class="fa-solid fa-store"></i> Mercado Livre Infinity
              </a>
         </li>
         </ul>
