--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
              </li>
              <li>
                 <a href="atividade1Json/atividade01.html">
-                    <i class="fas fa-file-code"></i> Atividade 01 JSON
+                    <i class="fas fa-file-code"></i> Atividade JSON
                  </a>
             </li>
            <li>
