feat: update product
Method Post to insert Product

--- a/MercadoLivreInfinity/index.html
+++ b/MercadoLivreInfinity/index.html
@@ -13,7 +13,7 @@
       </div>
       <div class="barra-pesquisa">
         <input type="text" placeholder="Pesquisar itens..." />
-        <button>Buscar</button>
+        <button type="button">Buscar</button>
       </div>
       <button class="botao-adicionar-produto" onclick="abrirFormulario()">
         Adicionar Produto
@@ -40,7 +40,7 @@
           <label for="imagemProduto">URL da Imagem:</label>
           <input type="url" id="imagemProduto" name="imagemProduto" required />
 
-          <button type="submit">Cadastrar</button>
+          <button type="button" onclick="cadastrarProdutos()">Cadastrar</button>
         </form>
       </div>
     </div>
