--- a/MercadoLivreInfinity/index.html
+++ b/MercadoLivreInfinity/index.html
@@ -12,7 +12,7 @@
         <h1>Minha Loja Virtual</h1>
       </div>
       <div class="barra-pesquisa">
-        <input type="text" placeholder="Pesquisar itens..." />
+        <input type="text" placeholder="Pesquisar itens..." id="pesquisar"/>
         <button type="button">Buscar</button>
       </div>
       <button class="botao-adicionar-produto" onclick="abrirFormulario()">
