feat: YouTube Clone
Inclusão de mais Um projeto para o Portifolio

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                 <i class="fa-solid fa-store"></i> Mercado Livre Infinity
          </a>
         </li>
+        <li>
+            <a href="YouTubeClone/index.html">
+                <i class="fas fa-list"></i> You Tube Clone
+         </a>
+        </li>
         </ul>
         <div id="contador-acessos">
             Acessos: <span id="numero-acessos">0</span>
