Link para retornar a pagina Principal

--- a/YouTubeClone/index.html
+++ b/YouTubeClone/index.html
@@ -120,7 +120,7 @@
         </section>
       </main>
     </div>
-
+    <a href="../index.html">Voltar</a>
     <script src="script.js"></script>
   </body>
 </html>
